<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_goneMarginBaseline="10dp"
    tools:context=".Eligibility">

    <TextView
        android:id="@+id/requirement_label"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="start"
        android:text="@string/requirement_label"
        android:textColor="#333333"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/cb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb1"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/cb8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb8"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/cb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb2"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/cb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb3"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/cb4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb4"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/cb5"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:text="@string/cb5"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/cb6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb6"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/cb7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb7"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnReset"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Reset"
            android:textColor="#FFFFFF"
            app:backgroundTint="#FF6637"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnDone"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="Done"
            android:textColor="#FFFFFF"
            app:backgroundTint="#FF6637"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Back"
        app:backgroundTint="#FF6637" />

</LinearLayout>